Update zone API to accept actual data
