# authoritative-api-swagger.yaml
@@ -93,6 +93,12 @@ paths:
           description: '“true” (default) or “false”, whether to include the “rrsets” in the response Zone object.'
           type: boolean
           default: true
+        - name: zone_struct
+          description: The zone struct to patch with
+          required: true
+          in: body
+          schema:
+            $ref: '#/definitions/Zone'
       responses:
         '201':
           description: A zone
